Rebrand to lowercase: harombe
- Change all user-facing text from 'Harombe' to 'harombe'
- Update system prompt, documentation, CLI messages
- Maintain consistency with similar projects (ollama, terraform, docker)
- Keep start-of-sentence capitalization in prose where appropriate

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Declarative self-hosted AI assistant platform"
 readme = "README.md"
 license = { text = "Apache-2.0" }
 authors = [
-    { name = "Harombe Contributors" }
+    { name = "harombe contributors" }
 ]
 requires-python = ">=3.11"
 keywords = ["ai", "assistant", "self-hosted", "distributed", "ollama"]
