chore: add gitignore rules for internal documentation
Prevent internal documentation from being committed:
- Phase design documents
- Internal progress tracking
- Alignment checks
- Notion-related documentation

Internal docs should be maintained in Notion workspace.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ result-*
 harombe.yaml
 .harombe/
 *.log
+
+# Internal documentation (keep in Notion)
+docs/internal/
+*_INTERNAL.md
+*_DESIGN.md
+*_ALIGNMENT*.md
+PHASE_*.md
+NOTION_*.md
