docs: add development guide and improve nix setup
Add DEVELOPMENT.md:
- Comprehensive development environment guide
- Instructions for using nix develop
- Testing, linting, and code quality workflows
- Project structure overview
- Troubleshooting common issues

Update .envrc:
- Document that nix develop is the recommended workflow
- Clarify that shellHook creates and activates .venv
- Simplify direnv configuration

Development environment verified:
- nix develop creates reproducible environment
- Python 3.14.3 with venv activation
- All dev dependencies installed automatically
- Tests pass (8 config tests verified)
- Ollama integration working

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,4 @@
 use flake
-layout python3
+
+# Note: The flake's shellHook will create and activate .venv
+# To manually enter the dev shell: nix develop
