feat: implement Phase 1.2 - discovery, health monitoring, and circuit breaker
This commit adds comprehensive service discovery, health monitoring, and
circuit breaker functionality for distributed cluster coordination.

New features:
- mDNS service discovery for automatic node registration
- Circuit breaker pattern to prevent cascading failures
- Retry logic with exponential backoff for health checks
- Periodic health monitoring with configurable intervals
- Service announcement capabilities

Components added:

1. Circuit Breaker (src/harombe/coordination/circuit_breaker.py)
   - Implements CLOSED -> OPEN -> HALF_OPEN state machine
   - Configurable failure/success thresholds and timeouts
   - Per-node circuit breaker registry
   - Protects against cascading failures

2. Service Discovery (src/harombe/coordination/discovery.py)
   - mDNS-based service discovery using zeroconf
   - Automatic node registration and removal
   - Service announcement with metadata (model, tier)
   - Callback-based service discovery notifications

3. Enhanced Cluster Manager (src/harombe/coordination/cluster.py)
   - Integrated circuit breaker for node health checks
   - Retry logic with exponential backoff (max 3 retries)
   - Periodic health monitoring in background task
   - Discovery service integration with callbacks
   - start() method for initialization
   - Health check respects circuit breaker state

4. Tests (tests/test_circuit_breaker.py)
   - 8 comprehensive test cases covering all circuit states
   - State transition testing
   - Registry functionality tests
   - 100% coverage of circuit breaker logic

Documentation:
- Updated Mermaid diagrams with consistent color scheme
- Professional neutral grays with single accent color
- Simplified visual hierarchy for better readability

Dependencies:
- Added zeroconf>=0.132 for mDNS service discovery

All tests passing (8/8 circuit breaker tests).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "rich>=13.7",
     "sse-starlette>=2.0",
     "duckduckgo-search>=6.0",
+    "zeroconf>=0.132",  # mDNS service discovery
 ]
 
 [project.optional-dependencies]
