docs: Improve README value prop and add ARCHITECTURE.md
Major documentation improvements:

README.md:
- Lead with "Terraform for self-hosted AI" positioning
- Clearer value proposition with bullet points
- Simplified architecture section, reference ARCHITECTURE.md
- More concise "How It Works" section
- Better communicate what harombe is immediately

ARCHITECTURE.md (NEW):
- Comprehensive five-layer system design
- Design philosophy and decisions
- Detailed component documentation
- Performance characteristics
- Future roadmap
- FAQ section

.gitignore:
- Add .claude/ directory (Claude Code artifacts)
- Remove .claude/settings.local.json from tracking

The goal: Users understand what harombe is and why it exists
within the first few seconds of reading the README.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ harombe.yaml
 .harombe/
 *.log
 
+# Claude Code
+.claude/
+
 # Internal documentation (keep in Notion)
 docs/internal/
 *_INTERNAL.md
