refactor: Update project description across all files
Replace 'Declarative self-hosted AI assistant platform' with
'Self-hosted agent framework for distributed AI workloads' in:

- pyproject.toml (package description and keywords)
- src/harombe/__init__.py (module docstring)
- src/harombe/cli/app.py (CLI help text)
- src/harombe/server/app.py (FastAPI description)
- flake.nix (Nix flake description)

Updated keywords to include 'agent', 'framework', 'autonomous'
and remove the assistant-focused positioning.

This aligns all code metadata with the agent framework positioning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "hatchling.build"
 [project]
 name = "harombe"
 version = "0.1.0"
-description = "Declarative self-hosted AI assistant platform"
+description = "Self-hosted agent framework for distributed AI workloads"
 readme = "README.md"
 license = { text = "Apache-2.0" }
 authors = [
     { name = "harombe contributors" }
 ]
 requires-python = ">=3.11"
-keywords = ["ai", "assistant", "self-hosted", "distributed", "ollama"]
+keywords = ["ai", "agent", "framework", "self-hosted", "distributed", "autonomous", "ollama"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
