chore: Add pre-commit hooks and development tooling
Set up comprehensive code quality automation:

.pre-commit-config.yaml (NEW):
- Ruff linting and formatting (auto-fix)
- Mypy type checking
- General file checks (trailing whitespace, YAML validation)
- Prettier for markdown/YAML formatting

Makefile (NEW):
- make help - Show available commands
- make format - Auto-format code
- make lint - Run linting
- make type-check - Run mypy
- make test/test-cov - Run tests
- make ci - Run all checks (for CI)
- make clean - Clean generated files

pyproject.toml:
- Enhanced ruff configuration with more rule sets
- Added pre-commit to dev dependencies
- Better lint rule selection (bugbear, comprehensions, simplify)

docs/DEVELOPMENT.md & docs/CONTRIBUTING.md:
- Updated with Makefile commands
- Pre-commit hooks documentation
- Improved workflow guidance

.gitignore:
- Added node_modules/ (prettier cache)

Pre-commit hooks now automatically run on every commit to ensure
consistent code quality and catch issues before CI.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ harombe.yaml
 # Claude Code
 .claude/
 
+# Node (for prettier pre-commit hook)
+node_modules/
+
 # Internal documentation (keep in Notion)
 docs/internal/
 *_INTERNAL.md
