docs: Add simple agent example and examples directory
Create examples/ directory with comprehensive documentation and
working code samples:

examples/01_simple_agent.py (NEW):
- Demonstrates basic single-node agent setup
- Shows LLM client initialization
- Uses all available tools (shell, filesystem, web search)
- Includes 4 example queries showing different capabilities
- Well-commented with clear explanations
- Ready to run standalone

examples/README.md (NEW):
- Overview of all examples
- Prerequisites and setup instructions
- Minimal template for creating custom agents
- Tips for customizing behavior and selecting tools
- Contributing guidelines

examples/.gitignore (NEW):
- Ignore example output files (txt, csv, json, logs)
- Keep example data if explicitly committed

README.md:
- Add Examples section linking to examples/
- Mention simple agent and upcoming examples

.pre-commit-config.yaml:
- Exclude examples/ from mypy type checking
- Examples are meant to be simple and readable

All code tested and working with correct imports.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
           - types-pyyaml
           - pydantic>=2.7
         args: [--config-file=pyproject.toml]
-        exclude: ^tests/
+        exclude: ^(tests/|examples/)
 
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
