examples: add multi-step data pipeline demonstration
Add examples/03_data_pipeline.py showing real-world data processing:

**What it demonstrates:**
- CSV file analysis and transformation
- Multi-step calculations and aggregations (category, region, product analysis)
- Automated report generation
- Error handling in data pipelines
- Batch file processing

**Pipeline stages:**
1. Data exploration - row count, columns, date range
2. Category analysis - revenue by category, units sold
3. Regional analysis - sales by region, top performing regions
4. Product insights - best-selling products, averages
5. Report generation - comprehensive markdown report

**Sample data:**
- examples/data/sales_data.csv - 20 rows of sample sales data
- examples/data/.gitignore - ignore generated reports, keep samples

This showcases how harombe can automate repetitive data analysis tasks
that would normally require writing custom scripts. The agent autonomously:
- Reads and parses CSV files
- Performs calculations across multiple dimensions
- Generates formatted reports
- Handles missing data gracefully

Updated examples/README.md with comprehensive documentation.

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -1,11 +1,11 @@
 # Ignore example output files
 *.txt
-*.csv
 *.json
 *.log
 output/
 reports/
-data/
 
-# But keep example data if explicitly committed
-!example_data.csv
+# Ignore data directory but keep sample files
+data/
+!data/.gitignore
+!data/sales_data.csv
