--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "sentence-transformers>=2.2",  # Local embeddings (Phase 2.2)
     "chromadb>=0.4",  # Vector store (Phase 2.2)
     "numpy>=1.24",  # Required for embeddings
+    "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
 ]
 
 [project.optional-dependencies]
