voice: implement TTS integration with Piper and Coqui (Phase 3 part 3)
Add text-to-speech (TTS) capabilities with two engine options:

1. **Piper TTS** (fast, low latency)
   - 100-300ms latency for short phrases
   - ONNX-based inference
   - Multiple model sizes (en_US-lessac-medium default)
   - Ideal for real-time voice applications

2. **Coqui TTS** (high quality)
   - 500ms-1s latency
   - Multi-speaker support
   - Voice cloning capabilities
   - Better quality for longer-form speech

**Common features:**
- Async synthesis with thread pool execution
- Streaming audio generation (async generators)
- Speed adjustment (0.5-2.0x)
- WAV format output (16-bit PCM)
- Lazy model loading
- Configurable sample rates

**Files added:**
- src/harombe/voice/tts.py - TTSEngine protocol
- src/harombe/voice/piper.py - Piper implementation
- src/harombe/voice/coqui.py - Coqui implementation
- tests/voice/test_tts.py - Protocol tests
- tests/voice/test_piper.py - Piper tests (11 tests)
- tests/voice/test_coqui.py - Coqui tests (11 tests)

**Dependencies added:**
- piper-tts>=1.2
- TTS>=0.22 (Coqui)

Tests skip gracefully if optional TTS engines aren't installed.
Piper/Coqui tests require model downloads on first run.

Task 20 complete - TTS integration ready for voice client CLI (Task 21).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "chromadb>=0.4",  # Vector store (Phase 2.2)
     "numpy>=1.24",  # Required for embeddings
     "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
+    "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
+    "TTS>=0.22",  # Text-to-speech - high quality (Phase 3)
 ]
 
 [project.optional-dependencies]
