voice: implement push-to-talk voice client CLI (Phase 3 part 4)
Add interactive voice assistant with push-to-talk interface:

**CLI Command:**
```
harombe voice [--stt-model=medium] [--tts-engine=piper] [--tts-model=en_US-lessac-medium]
```

**Features:**
- Push-to-talk interface (hold SPACE to record, release to process)
- Real-time audio capture from microphone
- STT → Agent → TTS pipeline
- Audio playback through speakers
- Rich terminal UI with status indicators
- Error handling and graceful degradation
- Echo mode when no agent configured

**Audio Pipeline:**
1. Record audio (16kHz mono, 16-bit PCM)
2. Transcribe with Whisper STT
3. Process query with agent (optional)
4. Synthesize response with TTS
5. Play audio through speakers

**Dependencies Added:**
- sounddevice>=0.4 - Audio I/O
- pynput>=1.7 - Keyboard input for push-to-talk

**Implementation Details:**
- Uses sounddevice for cross-platform audio I/O
- pynput for keyboard event handling
- Async task tracking to avoid memory leaks
- Proper audio format conversion (chunks → WAV)
- Background task management with callbacks

**Test Coverage:**
- 9 tests covering initialization, processing pipeline, error handling
- Mocked audio I/O to avoid hardware dependency
- 47% code coverage on voice client module

**Usage:**
```
# Basic usage with defaults
harombe voice

# Custom models
harombe voice --stt-model=large-v3 --tts-engine=coqui --tts-model="tts_models/en/vctk/vits"
```

Task 21 complete - voice client ready for API endpoints (Task 22).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dependencies = [
     "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
     "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
     "TTS>=0.22",  # Text-to-speech - high quality (Phase 3)
+    "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
+    "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
 ]
 
 [project.optional-dependencies]
