voice: add API endpoints for STT, TTS, and streaming (Phase 3 part 5)
Add voice API endpoints to FastAPI server:

**REST Endpoints:**
- POST /voice/stt - Upload audio (base64), get transcription
- POST /voice/tts - Send text, get audio (base64)
- POST /voice/stt/file - Upload audio file, get transcription

**WebSocket Endpoint:**
- WS /voice/stream - Bidirectional streaming

**WebSocket Protocol:**
Client → Server:
  {"type": "audio_chunk", "data": "<base64>", "format": "wav"}
  {"type": "audio_end"}
  {"type": "ping"}

Server → Client:
  {"type": "transcription", "text": "...", "is_final": true}
  {"type": "agent_response", "text": "..."}
  {"type": "audio_chunk", "data": "<base64>", "format": "wav"}
  {"type": "audio_end"}
  {"type": "pong"}
  {"type": "error", "message": "..."}

**Features:**
- Engine initialization via init_voice_engines()
- Async audio processing with STT/TTS engines
- Agent integration for voice queries
- Streaming TTS responses
- Error handling with 503 when engines not initialized
- CORS enabled for web clients

**Dependencies Added:**
- python-multipart>=0.0.6 - For file uploads in FastAPI

**Test Coverage:**
- 9 tests covering all endpoints
- REST endpoint tests (STT, TTS, file upload)
- WebSocket streaming tests
- Error handling tests (no engine, invalid input)
- 82% code coverage on voice_routes.py

**Usage:**
```python
from harombe.server.voice_routes import init_voice_engines

# Initialize engines
init_voice_engines(stt_engine=whisper, tts_engine=piper, agent=my_agent)

# Start server with voice routes
app = create_app(config)  # Voice routes auto-included
```

Integration with server/app.py - voice routes automatically included.

Task 22 complete - voice API ready for configuration and documentation (Task 23).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "typer[all]>=0.12",
     "fastapi>=0.115",
     "uvicorn[standard]>=0.30",
+    "python-multipart>=0.0.6",  # For file uploads in FastAPI
     "pydantic>=2.7",
     "pyyaml>=6.0",
     "openai>=1.40",
