ci: fix Python 3.14 incompatibility with ChromaDB
ChromaDB depends on pydantic v1 which is incompatible with Python 3.14.
This commit addresses CI failures by:

1. Cap Python version to <3.14 in pyproject.toml
2. Add comment in CI workflow documenting the limitation
3. Add system dependencies for audio libraries on Ubuntu
   - portaudio19-dev for sounddevice
   - libsndfile1 for audio file I/O

Supported Python versions: 3.11, 3.12, 3.13

Fixes: GitHub Actions CI failures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = { text = "Apache-2.0" }
 authors = [
     { name = "harombe contributors" }
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 keywords = ["ai", "agent", "framework", "self-hosted", "distributed", "autonomous", "ollama"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: Implementation :: CPython",
 ]
 
 dependencies = [
