fix: make Coqui TTS optional for Python 3.11+ compatibility
Coqui TTS (high-quality voice synthesis) only supports Python 3.7-3.10.
This commit makes it an optional dependency to fix CI failures on Python 3.11+.

Changes:
- Move TTS>=0.22 from core dependencies to optional [coqui] extra
- Add python_version constraint: only install on Python <3.11
- Update error message in coqui.py with Python version info
- Update documentation to note Coqui requires Python 3.10 or earlier
- Piper TTS remains the default (supports all Python versions)

Installation:
- Default: pip install harombe (includes Piper TTS)
- With Coqui: pip install 'harombe[coqui]' (Python 3.10 only)

This fixes CI failures on:
- macOS-latest with Python 3.13
- Ubuntu-latest with Python 3.13

Tests: All Coqui tests properly skip when TTS not available

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,16 @@ dependencies = [
     "numpy>=1.24",  # Required for embeddings
     "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
     "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
-    "TTS>=0.22",  # Text-to-speech - high quality (Phase 3)
     "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
     "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
 ]
 
 [project.optional-dependencies]
+# Coqui TTS (high-quality voice) - only supports Python <3.11
+coqui = [
+    "TTS>=0.22; python_version < '3.11'",
+]
+
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
