feat(security): Implement Docker container manager (Task 27)
- Created DockerManager class for container lifecycle management
- Added ResourceLimits dataclass for CPU/memory/process limits
- Added ContainerConfig dataclass for container specifications
- Implemented container operations:
  - create_container, start_container, stop_container
  - restart_container, remove_container
  - get_status, get_logs, get_stats
  - list_containers, cleanup_all
- Added Docker network creation (harombe-network)
- Created comprehensive tests (23 tests, 19 passing, 4 integration skipped)
- Added docker optional dependency to pyproject.toml
- 45% test coverage (integration tests require Docker daemon)
- All ruff/mypy checks pass

Phase 4.1 Docker container management complete.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,11 @@ coqui = [
     "TTS>=0.22; python_version < '3.11'",
 ]
 
+# Docker support for Phase 4 (Security Layer)
+docker = [
+    "docker>=7.0",
+]
+
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
