feat(docs): Write Phase 4.1 tests and documentation (Task 30)
Integration Tests (tests/integration/test_phase4_integration.py):
- Docker network creation and management
- Container lifecycle with resource limits
- Health monitoring integration
- Multi-container orchestration
- Gateway initialization and routing
- End-to-end request flow testing
- 11 tests: 5 passing, 6 skipped (require Docker daemon)
- Run with: pytest -m docker_integration

Test Infrastructure:
- Added docker_integration pytest marker
- Added cluster_integration pytest marker
- Created tests/integration/ directory
- Updated pyproject.toml with marker configuration

Documentation:
- docs/security-phase4.1-foundation.md (comprehensive architecture doc)
- docs/security-quickstart.md (5-minute setup guide)

Phase 4.1 (Foundation) COMPLETE ✅

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,3 +126,7 @@ disallow_untyped_defs = true
 asyncio_mode = "auto"
 testpaths = ["tests"]
 addopts = "--cov=harombe --cov-report=term-missing"
+markers = [
+    "docker_integration: Integration tests requiring Docker daemon (deselect with '-m \"not docker_integration\"')",
+    "cluster_integration: Integration tests requiring multi-node cluster",
+]
