feat(security): Implement audit logging system (Phase 4.2)
Complete audit trail for all MCP Gateway operations with:
- SQLite-based audit database with optimized schema
- Async audit logger with sensitive data redaction
- CLI commands for querying and exporting logs
- Integration with MCP Gateway
- Comprehensive tests and documentation

Database Schema:
- audit_events: Request/response tracking with correlation IDs
- tool_calls: Tool execution details with container IDs
- security_decisions: Authorization and security gate records
- Indexed for fast queries by correlation, session, time, tool

Features:
- Automatic sensitive data redaction (API keys, passwords, JWT, credit cards)
- Async writes for non-blocking performance
- 90-day retention policy with automatic cleanup
- WAL mode for better concurrency
- Statistics and analytics support

CLI Commands:
- harombe audit events: Query audit events
- harombe audit tools: Query tool executions
- harombe audit security: Query security decisions
- harombe audit stats: Show statistics
- harombe audit export: Export to JSON/CSV

Configuration:
security.audit.enabled: true
security.audit.database: ~/.harombe/audit.db
security.audit.retention_days: 90
security.audit.redact_sensitive: true

Tests:
- 11 audit database tests (97% coverage)
- 18 audit logger tests (82% coverage)
- 11 integration tests with MCP Gateway

Documentation:
- Complete user guide with examples
- SOC 2 and GDPR compliance guidance
- Forensic investigation workflows
- Performance optimization tips

Task 31-34 (Phase 4.2) - COMPLETE ✅

--- a/harombe.yaml.example
+++ b/harombe.yaml.example
@@ -68,6 +68,41 @@ voice:
     speed: 1.0  # Speech speed (0.5-2.0)
     device: auto  # auto, cpu, cuda, mps
 
+# Security configuration (Phase 4)
+security:
+  enabled: false  # Enable security layer with capability containers
+
+  # MCP Gateway
+  gateway:
+    host: 127.0.0.1
+    port: 8100
+    timeout: 30.0
+
+  # Audit logging (Phase 4.2)
+  audit:
+    enabled: true  # Enable audit logging
+    database: ~/.harombe/audit.db  # SQLite database path
+    retention_days: 90  # Auto-delete logs older than 90 days
+    redact_sensitive: true  # Redact API keys, passwords, tokens
+    log_level: INFO  # DEBUG, INFO, WARN, ERROR
+
+  # Credential management (planned)
+  credentials:
+    provider: env  # env, vault, sops
+    vault_url: null
+    secret_prefix: HAROMBE_
+
+  # Container isolation
+  isolation: docker  # docker or gvisor
+
+  # Human-In-The-Loop gates (planned)
+  hitl:
+    enabled: false
+    require_confirmation:
+      - shell_exec
+      - filesystem_write
+      - code_exec
+
 # Cluster configuration (Phase 1 - Multi-machine)
 # cluster:
 #   coordinator:
