--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dependencies = [
     "numpy>=1.24",  # Required for embeddings
     "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
     "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
+    "dnspython>=2.4",  # DNS resolution for network isolation (Phase 4.4)
+    "docker>=7.0",  # Docker SDK for container management (Phase 4)
     "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
     "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
 ]
@@ -129,4 +131,5 @@ addopts = "--cov=harombe --cov-report=term-missing"
 markers = [
     "docker_integration: Integration tests requiring Docker daemon (deselect with '-m \"not docker_integration\"')",
     "cluster_integration: Integration tests requiring multi-node cluster",
+    "docker: Tests requiring Docker daemon (deselect with '-m \"not docker\"')",
 ]
