feat(security): Implement browser container manager for Phase 4.6
BrowserContainerManager for pre-authenticated browser automation.

Design:
- Comprehensive design doc (docs/browser-container-design.md)
- Pre-authentication flow (credentials injected before agent access)
- Accessibility snapshot approach (semantic tree instead of raw HTML)
- Integration with vault backend for credential management

Core Implementation:
- BrowserContainerManager class with Playwright integration
- Session lifecycle management (create, cleanup, timeout)
- Pre-authentication credential injection (cookies, localStorage)
- Accessibility snapshot generator with sensitive field filtering
- Resource limits (max sessions, action count, timeout)
- Session isolation (each session in separate browser context)

Security Features:
- Credentials never exposed to agent or LLM
- Password fields automatically filtered from snapshots
- Browser context destroyed after session (credentials purged)
- Vault-only credential access (agent has no vault access)

Dependencies:
- Added playwright>=1.40 to pyproject.toml
- Playwright browser automation framework

Tests:
- 23 unit tests (87% coverage)
- Session management tests
- Credential injection tests
- Accessibility filtering tests
- All tests passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
     "dnspython>=2.4",  # DNS resolution for network isolation (Phase 4.4)
     "docker>=7.0",  # Docker SDK for container management (Phase 4)
+    "playwright>=1.40",  # Browser automation for Phase 4.6
     "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
     "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
 ]
