--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,11 @@ dev = [
     "respx>=0.21",
     "types-pyyaml",
     "pre-commit>=3.6",
+    # Documentation
+    "mkdocs>=1.5",
+    "mkdocs-material>=9.5",
+    "mkdocs-mermaid2-plugin>=1.1",
+    "mkdocs-git-revision-date-localized-plugin>=1.2",
 ]
 
 [project.scripts]
