--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ dependencies = [
     "playwright>=1.40",  # Browser automation for Phase 4.6
     "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
     "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
+    "scikit-learn>=1.3",  # ML models for anomaly detection (Phase 5)
+    "scipy>=1.11",  # Statistical functions for threat detection (Phase 5)
+    "joblib>=1.3",  # Model persistence (Phase 5)
 ]
 
 [project.optional-dependencies]
@@ -138,4 +141,5 @@ markers = [
     "docker_integration: Integration tests requiring Docker daemon (deselect with '-m \"not docker_integration\"')",
     "cluster_integration: Integration tests requiring multi-node cluster",
     "docker: Tests requiring Docker daemon (deselect with '-m \"not docker\"')",
+    "integration: Integration tests that test multiple components together",
 ]
