--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "scikit-learn>=1.3",  # ML models for anomaly detection (Phase 5)
     "scipy>=1.11",  # Statistical functions for threat detection (Phase 5)
     "joblib>=1.3",  # Model persistence (Phase 5)
+    "cryptography>=41.0",  # TLS certificate operations (Phase 5.4)
 ]
 
 [project.optional-dependencies]
