docs: Comprehensive documentation quality improvement (Phases A-D)
Phase A - Fix factual inconsistencies:
- Fix MIT → Apache 2.0 license reference in docs/index.md
- Restructure quickstart to be Ollama-first (matching README)
- Update phase status markers (Phase 5, 6 now complete)
- Rewrite docs/README.md with comprehensive file listing

Phase B - Structural improvements:
- Add tables of contents to README.md, ARCHITECTURE.md, memory-architecture.md
- Move 25 phase files into docs/phases/ with normalized naming
- Create docs/phases/index.md with grouped phase summary index
- Rewrite mkdocs.yml nav with full Phase 5 sub-sections and Reference section

Phase C - Professional polish:
- Normalize docs/index.md tone to match developer-practical README style
- Add CHANGELOG.md (Keep a Changelog format)
- Add CODE_OF_CONDUCT.md (Contributor Covenant v2.1)
- Add performance methodology context for benchmark claims
- Update CONTRIBUTING.md project structure (8 → 16 subdirectories)

Phase D - Academic & developer depth:
- Add mkdocstrings plugin and docs/api/index.md for auto-generated API reference
- Enhance module docstrings for 7 __init__.py files
- Add docs/glossary.md with 12 key terms
- Add CITATION.cff for academic references
- Add 5 Architecture Decision Records in docs/decisions/

Also fix pre-commit check-yaml hook to support MkDocs Python tags.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,15 @@ dev = [
     "mkdocs-material>=9.5",
     "mkdocs-mermaid2-plugin>=1.1",
     "mkdocs-git-revision-date-localized-plugin>=1.2",
+    "mkdocstrings[python]>=0.24",
+]
+
+docs = [
+    "mkdocs>=1.5",
+    "mkdocs-material>=9.5",
+    "mkdocs-mermaid2-plugin>=1.1",
+    "mkdocs-git-revision-date-localized-plugin>=1.2",
+    "mkdocstrings[python]>=0.24",
 ]
 
 [project.scripts]
