--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,14 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
       type: timeago
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            show_source: true
+            show_root_heading: true
+            members_order: source
+            show_if_no_docstring: false
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -107,16 +115,48 @@ nav:
       - HITL Gates: hitl-design.md
   - Deployment:
       - Production Guide: production-deployment-guide.md
-      - Performance Results: phase4-8-performance-results.md
-  - Development:
-      - Contributing: CONTRIBUTING.md
-      - Development Setup: DEVELOPMENT.md
+      - Performance Results: phases/phase4-8-performance-results.md
   - Phases:
-      - Phase 0 (Foundation): phase0-implementation-summary.md
-      - Phase 4 (Security): phase4-implementation-plan.md
-      - Phase 4.8 (Integration): phase4-8-integration-plan.md
-      - Phase 5 (Intelligence): phase5-implementation-plan.md
+      - Index: phases/index.md
+      - Phase 0 (Foundation): phases/phase0-implementation-summary.md
+      - Phase 4 (Security):
+          - Implementation Plan: phases/phase4-implementation-plan.md
+          - Integration Plan: phases/phase4-8-integration-plan.md
+      - Phase 5 (Intelligence):
+          - Overview: phases/phase5-implementation-plan.md
+          - Completion Summary: phases/phase5-completion.md
+          - 5.1 Anomaly Detection:
+              - ML Anomaly Detection: phases/phase5-1.1-anomaly-detection.md
+              - Threat Scoring: phases/phase5-1.3-threat-scoring.md
+              - Threat Intelligence: phases/phase5-1.4-threat-intelligence.md
+          - 5.2 Trust & Approval:
+              - Historical Risk Scoring: phases/phase5-2.1-historical-risk-scoring.md
+              - Trust Manager: phases/phase5-2.2-trust-manager.md
+              - Auto-Approval: phases/phase5-2.3-auto-approval.md
+              - Context Engine: phases/phase5-2.4-context-engine.md
+          - 5.3 Secret Rotation:
+              - Rotation: phases/phase5-3.1-rotation.md
+              - Zero-Downtime: phases/phase5-3.2-zero-downtime.md
+              - Verification: phases/phase5-3.3-verification.md
+              - Emergency Rotation: phases/phase5-3.4-emergency-rotation.md
+          - 5.4 Network Security:
+              - Certificate Pinning: phases/phase5-4.1-cert-pinning.md
+              - Deep Packet Inspection: phases/phase5-4.2-dpi.md
+              - Protocol Filtering: phases/phase5-4.3-protocol-filter.md
+              - Traffic Anomaly Detection: phases/phase5-4.4-traffic-anomaly.md
+          - 5.5 Monitoring:
+              - SIEM Integration: phases/phase5-5.1-siem-integration.md
+              - Alert Rules: phases/phase5-5.2-alert-rules.md
+              - Compliance Reports: phases/phase5-5.3-compliance-reports.md
+              - Dashboard: phases/phase5-5.4-dashboard.md
+  - Reference:
+      - Glossary: glossary.md
+      - API Reference: api/index.md
+      - Architecture Decisions: decisions/index.md
   - User Guides:
       - Browser Usage: browser-usage.md
       - Code Sandbox: code-sandbox-usage.md
       - Voice Setup: voice-setup.md
+  - Development:
+      - Contributing: CONTRIBUTING.md
+      - Development Setup: DEVELOPMENT.md
