--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install mkdocs-material mkdocs-mermaid2-plugin mkdocs-git-revision-date-localized-plugin "mkdocstrings[python]>=0.24"
+          pip install -e ".[docs]"
 
       - name: Build documentation
         run: mkdocs build --strict
