--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "scipy>=1.11",  # Statistical functions for threat detection (Phase 5)
     "joblib>=1.3",  # Model persistence (Phase 5)
     "cryptography>=41.0",  # TLS certificate operations (Phase 5.4)
+    "mcp>=1.2",  # Model Context Protocol SDK (MCP server/client)
 ]
 
 [project.optional-dependencies]
@@ -91,6 +92,8 @@ docs = [
 
 [project.scripts]
 harombe = "harombe.cli.app:main"
+
+[project.entry-points."harombe.plugins"]
 
 [project.urls]
 Homepage = "https://github.com/smallthinkingmachines/harombe"
