feat: Rewrite README, complete code execution sandbox
Rewrite README from 1022 to ~200 lines: lead with quick start, OS-level
framing, security deep dive, condensed features. Move phase history to
docs/roadmap.md and troubleshooting to docs/troubleshooting.md. Update
pyproject.toml description and keywords.

Complete code execution sandbox (Phase 4.7):
- Register all 6 sandbox tool routes in MCP gateway
- Implement code-exec container MCP server (replaces placeholder)
- Add 21 tests covering tools, HITL rules, and gateway routes
- Promote ZKP audit proofs and code sandbox to Production in status table

--- a/docker/code-exec/Dockerfile
+++ b/docker/code-exec/Dockerfile
@@ -8,10 +8,11 @@ LABEL org.opencontainers.image.vendor="Harombe"
 WORKDIR /app
 
 # Install system dependencies and language runtimes
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     nodejs \
     npm \
+    bash \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
@@ -20,7 +21,10 @@ RUN pip install --no-cache-dir \
     uvicorn[standard]>=0.30 \
     pydantic>=2.7
 
-# Create sandbox directory
+# Copy MCP server implementation
+COPY server.py /app/
+
+# Create sandbox workspace
 RUN mkdir -p /sandbox && chmod 755 /sandbox
 
 # Create non-root user
@@ -36,5 +40,5 @@ EXPOSE 3002
 HEALTHCHECK --interval=10s --timeout=5s --start-period=10s --retries=3 \
     CMD curl -f http://localhost:3002/health || exit 1
 
-# Run code execution MCP server (placeholder - will be implemented in Phase 4.7)
-CMD ["sh", "-c", "echo 'Code Execution MCP server starting on port ${MCP_PORT:-3002}...' && echo 'Note: Code execution server implementation pending (Phase 4.7)' && python3 -m http.server ${MCP_PORT:-3002}"]
+# Run code execution MCP server
+CMD ["python3", "/app/server.py"]
