--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "hatchling.build"
 [project]
 name = "harombe"
 version = "0.1.0"
-description = "Self-hosted agent framework for distributed AI workloads"
+description = "Full-stack agent framework — voice, memory, tools, security — runs on your hardware, no cloud required"
 readme = "README.md"
 license = { text = "Apache-2.0" }
 authors = [
     { name = "harombe contributors" }
 ]
 requires-python = ">=3.11,<3.14"
-keywords = ["ai", "agent", "framework", "self-hosted", "distributed", "autonomous", "ollama"]
+keywords = ["ai", "agent", "framework", "self-hosted", "security", "container-isolation", "voice", "rag", "mcp", "ollama"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
