--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,9 @@ ignore = [
     "SIM108", # Use ternary operator (not always clearer)
 ]
 
+[tool.ruff.lint.isort]
+known-third-party = ["mcp"]
+
 [tool.ruff.lint.per-file-ignores]
 # Tests can use assertions and relative imports
 "tests/**/*.py" = ["S101", "TID252"]
