fix: Resolve all 339 mypy strict-mode errors and make type checking blocking
Add return type annotations, generic type parameters, None guards, and
explicit casts across 77 source files to achieve zero mypy errors under
strict mode. Install full project in CI lint job and handle environment-
dependent decorator error codes. Remove continue-on-error from CI and
|| true from pre-commit so mypy is now a blocking check.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,13 +15,12 @@ repos:
       - id: ruff-format
         exclude: ^examples/sample_code/
 
-  # Mypy - Type checking (advisory only, non-blocking)
-  # Many dependencies lack type stubs (httpx, fastapi, openai, etc.)
+  # Mypy - Type checking (blocking)
   - repo: local
     hooks:
       - id: mypy
         name: mypy
-        entry: bash -c 'mypy src || true'
+        entry: bash -c 'mypy src'
         language: system
         types: [python]
         pass_filenames: false
