fix: Resolve CI failures in mypy and SSE streaming test
- Use positional arg for AESGCM.generate_key() (cryptography API change)
- Fix async event loop binding issue in test_chat_stream_error by
  replacing AsyncMock(side_effect=...) with a plain async function

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -178,6 +178,7 @@ module = [
     "harombe.channels.slack",
     "harombe.channels.discord",
     "harombe.mcp.server",
+    "harombe.security.distributed.hsm",
 ]
 warn_unused_ignores = false
 
