--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "hatchling.build"
 
 [project]
 name = "harombe"
-version = "0.3.0"
+version = "0.3.1"
 description = "Full-stack agent framework — voice, memory, tools, security — runs on your hardware, no cloud required"
 readme = "README.md"
 license = { text = "Apache-2.0" }
 authors = [
     { name = "harombe contributors" }
 ]
-requires-python = ">=3.11,<3.14"
+requires-python = ">=3.11"
 keywords = ["ai", "agent", "framework", "self-hosted", "security", "container-isolation", "voice", "rag", "mcp", "ollama"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -74,6 +74,7 @@ dev = [
     "respx>=0.21",
     "types-pyyaml",
     "pre-commit>=3.6",
+    "detect-secrets>=1.4",
     # Documentation
     "mkdocs>=1.5",
     "mkdocs-material>=9.5",
