chore: Remove whitepaper_results.json and gitignore it
Benchmark results change between runs and shouldn't be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ harombe.yaml
 .harombe/
 *.log
 
+# Benchmark results (generated per-run)
+benchmarks/whitepaper_results.json
+
 # Claude Code
 .claude/
 
