feat: Add Podman support as first-class container engine
Auto-detect Docker or Podman via new container_engine module and
configure the docker SDK client for whichever is available. Adds
engine-aware bridge naming, runtime selection (gVisor vs crun),
and a `container_engine` config field. Also excludes integration
marker from CI test runs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ coqui = [
     "TTS>=0.22; python_version < '3.11'",
 ]
 
-# Docker support for Phase 4 (Security Layer)
+# Container engine support for Phase 4 (Security Layer) — works with both Docker and Podman
 docker = [
     "docker>=7.0",
 ]
